--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+
     <script src="https://kit.fontawesome.com/2225c51832.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="styles/portfolio.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header class="header">
@@ -40,11 +46,11 @@
             <div class="about-info-container">
                 
 <div class="about-info">
-    <p class="info-title">Name</p>
+    <p class="info-title">Name:</p>
     <p class="info-description">Marry Hardy</p>
 </div>
 <div class="about-info">
-    <p class="info-title">Email</p>
+    <p class="info-title">Email:</p>
     <p class="info-description">info@gmail.com</p>
 </div>
 <div class="about-info">
@@ -52,7 +58,7 @@
     <p class="info-description">Web Developer</p>
 </div>
 <div class="about-info">
-    <p class="info-title">Location</p>
+    <p class="info-title">Location:</p>
     <p class="info-description">Dhaka, Bangladesh</p>
 </div>
 </div>
@@ -88,7 +94,6 @@
         <!-- Resume Section -->
         <section class="resume">
          <h3 class="section-title">A summary of My Resume</h3>
-
          <div class="resume-content">
             <div>
                 <h3 class="resume-title">My Education</h3>
